# QTTool

./: .gitignore  README.md  requirements.txt  test.py
src/: Application.py  Enter.py  MainWindow.py  data_processing.cp38-win_amd64.pyd  main.py  pictures.qrc  pictures_rc.py  start.py  test_thread_pool.py
src/C_Tool/: CMakeLists.txt
src/C_Tool/include/: data_processing.h  thread_pool.h
src/C_Tool/src/: data_processing.cpp  pybind11_module.cpp  thread_pool.cpp  thread_pool_pybind11.cpp
src/C_Tool/src/Shell/: shell.cpp
src/Components/: DrawViewer.py  FileBrowserDock.py  MainWorkspace.py  MusicPlayer.py  TextFileEditor.py
src/Components/AnalysisData/: AnalysisData.py
src/Components/CColorPicker/: CColorControl.py  CColorInfos.py  CColorItems.py  CColorPalettes.py  CColorPanel.py  CColorPicker.py  CColorSlider.py  CColorStraw.py  README.md
src/Components/CDrawer/: CDrawer.py
src/Components/CPaginationBar/: CPaginationBar.py
src/Components/Chat/: Chat.ui
src/Components/FileTree/: FileTree.py
src/Components/MusicPlayer/: MusicPlayer.py  MusicPlayer.ui  UI_MusicPlayer.py  musicplayer.qrc  musicplayer_rc.py
src/Components/MusicSperate/: MusicSperate.ui
src/Components/TabWidget/: TabWidget.py
src/UI/: FileEditor.ui  MainWindow.ui  MainWorkspace.ui  MusicPlayer.ui  ShowDraw.ui  UI_FileEditor.py  UI_MainWindow.py  UI_MainWorkspace.py  UI_MusicPlayer.py  UI_ShowDraw.py
src/UI_function/: FileEditorController.py  MainController.py  MainWindowController.py  ShowDrawController.py
src/common/: FileBrowserDock.py  Stack.py
src/models/: DataInfo.py
(+20 files in other folders)
